# libdbus-practices

./: .gitignore  CMakeLists.txt  README.md  build.py
output/: client  demo  server
src/: CMakeLists.txt  client.cpp  server.cpp
